--- a/Views/Templates/ReceiverChatItemTemplate.xaml
+++ b/Views/Templates/ReceiverChatItemTemplate.xaml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiChatAppdeux.Dashboard"
-             Title="Dashboard"
-             NavigationPage.HasNavigationBar="False">
+             x:Class="MauiChatAppdeux.Views.Templates.ReceiverChatItemTemplate"
+             Title="ReceiverChatItemTemplate">
     <VerticalStackLayout>
         <Label 
-            Text="Maui Chat App!"
+            Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
