--- a/ChatRooms.xaml
+++ b/ChatRooms.xaml
@@ -2,9 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:templates="clr-namespace:MauiChatAppdeux.Views.Templates"
              x:Class="MauiChatAppdeux.ChatRooms"
-            
+            NavigationPage.HasNavigationBar="False"
              Title="ChatRooms">
-    <VerticalStackLayout>
+    <VerticalStackLayout BackgroundColor="#1C375C">
         <Label 
             Text="Chat Rooms!"
             VerticalOptions="Center" 
