--- a/Views/ChatRooms.xaml
+++ b/Views/ChatRooms.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:templates="clr-namespace:MauiChatAppdeux.Views.Templates"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="MauiChatAppdeux.ChatRooms"
             NavigationPage.HasNavigationBar="False"
              Title="ChatRooms">
