--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -4,7 +4,142 @@
              x:Class="MauiChatAppdeux.Views.HomeView"
              Title="HomeView"
              
-              xmlns:viewmodel="clr-namespace:ChatApp.ViewModels"
+              xmlns:viewmodel="clr-namespace:MauiChatAppdeux.ViewModels"
+              BackgroundColor="{DynamicResource SecondaryColor}"
+             NavigationPage.HasNavigationBar="False"
              >
-    
+    <ContentPage.Content>
+        <Grid
+            BackgroundColor="#1C375C"
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackLayout Grid.Row="0" HorizontalOptions="Center">
+                <Image
+                    Margin="0,30"
+                    Aspect="AspectFit"
+                    HeightRequest="100"
+                    Source="dotnet_bot.svg"
+                    WidthRequest="80" />
+            </StackLayout>
+
+            <Frame
+                Grid.Row="1"
+                Margin="0,0,0,-40"
+                BorderColor="#1C375C"
+                CornerRadius="50"
+                HasShadow="True"
+                HeightRequest="700">
+                <Grid
+                    Padding="20,50,20,0"
+                    HorizontalOptions="FillAndExpand"
+                    RowSpacing="20"
+                    VerticalOptions="FillAndExpand">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Label
+                        Grid.Row="0"
+                        FontAttributes="Bold"
+                        FontSize="24"
+                        HorizontalOptions="CenterAndExpand"
+                        Text="Welcome Back!"
+                        TextColor="#1C375C" />
+                    <Label
+                        Grid.Row="1"
+                        Margin="0,-15,0,0"
+                        HorizontalOptions="CenterAndExpand"
+                        Text="Login in to account"
+                        TextColor="#1C375C" />
+                    <Entry
+                        Grid.Row="2"
+                        Margin="0,20,0,0"
+                        HorizontalOptions="FillAndExpand"
+                        Placeholder="Username"
+                        TextColor="Black"
+                        Keyboard="Email"
+                        Text="{Binding UserName }"
+                        VerticalOptions="FillAndExpand" />
+                    <Entry
+                        Grid.Row="3"
+                        HorizontalOptions="FillAndExpand"
+                        IsPassword="True"
+                        Placeholder="Password"
+                        TextColor="Black"
+                        Text="{Binding UserPassword}"
+                        VerticalOptions="FillAndExpand" />
+                    <Button
+                        Grid.Row="4"
+                        BackgroundColor="#1C375C"
+                        Command="{Binding LoginBtn}"
+                        CornerRadius="20"
+                        Text="Login" TextColor="White"/>
+
+                    <Button
+                        Grid.Row="5"
+                        BackgroundColor="#1C375C"
+                        Command="{Binding RegisterBtn}"
+                        CornerRadius="20"
+                        Text="Register using Email" TextColor="White"/>
+
+                    <Label
+                        Grid.Row="6"
+                        Margin="0,-10,0,0"
+                        HorizontalOptions="CenterAndExpand"
+                        Text="Don't have an account? Sign up here" />
+                    <StackLayout
+                        Grid.Row="7"
+                        HorizontalOptions="CenterAndExpand"
+                        Orientation="Horizontal"
+                        Spacing="40">
+                        <Image
+                            Aspect="AspectFit"
+                            HeightRequest="30"
+                            Source="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSo626DNKJxdHM-VNRD0m7x_8Jim-r9kRalJQ"
+                            WidthRequest="30" />
+                        <Image
+                            Aspect="AspectFit"
+                            HeightRequest="30"
+                            Source="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnLfAn36-LTYNHjioWgvu-0KUTIDDrW5lX_g"
+                            WidthRequest="30" />
+                        <Image
+                            Aspect="AspectFit"
+                            HeightRequest="30"
+                            Source="googlelogo.png"
+                            WidthRequest="30" />
+                        <Image
+                            Aspect="AspectFit"
+                            HeightRequest="30"
+                            Source="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+                            WidthRequest="30" />
+                    </StackLayout>
+                    <Label
+                        Grid.Row="8"
+                        FontAttributes="Bold"
+                        HorizontalOptions="CenterAndExpand"
+                        Text="Forget Password" />
+
+                </Grid>
+            </Frame>
+
+            <!-- <Button
+                x:Name="CounterBtn"
+                Text="Click me"
+                SemanticProperties.Hint="Counts the number of times you click"
+                Clicked="OnCounterClicked"
+                HorizontalOptions="Center" /> -->
+
+        </Grid>
+    </ContentPage.Content>
 </ContentPage>
