--- a/HomeView.xaml
+++ b/HomeView.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiChatAppdeux.HomeView"
              Title="HomeView"
-             
-              xmlns:viewmodel="clr-namespace:MauiChatAppdeux.ViewModels"
+            
+              
               BackgroundColor="{DynamicResource SecondaryColor}"
              NavigationPage.HasNavigationBar="False"
              >
@@ -69,7 +69,7 @@
                         Placeholder="Username"
                         TextColor="Black"
                         Keyboard="Email"
-                        Text="{Binding UserName }"
+                        Text="{Binding Email }"
                         VerticalOptions="FillAndExpand" />
                     <Entry
                         Grid.Row="3"
@@ -77,12 +77,12 @@
                         IsPassword="True"
                         Placeholder="Password"
                         TextColor="Black"
-                        Text="{Binding UserPassword}"
+                        Text="{Binding Password}"
                         VerticalOptions="FillAndExpand" />
                     <Button
                         Grid.Row="4"
                         BackgroundColor="#1C375C"
-                        Command="{Binding LoginBtn}"
+                        Command="{Binding LoginCommand}"
                         CornerRadius="20"
                         Text="Login" TextColor="White"/>
 
