--- a/RegisterPage.xaml
+++ b/RegisterPage.xaml
@@ -4,50 +4,102 @@
              x:Class="MauiChatAppdeux.RegisterPage"
              Title="RegisterPage"
              NavigationPage.HasNavigationBar="False">
+
     <Grid
+            BackgroundColor="#1C375C"
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackLayout Grid.Row="0" HorizontalOptions="Center">
+            <Image
+                    Margin="0,30"
+                    Aspect="AspectFit"
+                    HeightRequest="100"
+                    Source="dotnet_bot.svg"
+                    WidthRequest="80" />
+        </StackLayout>
+
+        <Frame
+                Grid.Row="1"
+                Margin="0,0,0,-40"
+                BorderColor="#1C375C"
+                CornerRadius="50"
+                HasShadow="True"
+                HeightRequest="700">
+
+            <Grid
+         BackgroundColor="White"
         Padding="20,50,20,0"
         HorizontalOptions="FillAndExpand"
         RowSpacing="20"
         VerticalOptions="FillAndExpand">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Label
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Label
             Grid.Row="0"
             FontAttributes="Bold"
             FontSize="24"
             HorizontalOptions="CenterAndExpand"
             Text="Registration"
             TextColor="#1C375C" />
-        <Label
+                <Label
             Grid.Row="1"
             Margin="0,-15,0,0"
             HorizontalOptions="CenterAndExpand"
             Text="Register With Email"
             TextColor="#1C375C" />
-        <Entry
+                <Entry
             Grid.Row="2"
+             PlaceholderColor="#1C375C"
+            TextColor="Black"
             Margin="0,20,0,0"
             HorizontalOptions="FillAndExpand"
             Placeholder="Email"
             Text="{Binding Email}"
             VerticalOptions="FillAndExpand" />
-        <Entry
+                <Entry
+            PlaceholderColor="#1C375C"
+            TextColor="Black"
             Grid.Row="3"
             HorizontalOptions="FillAndExpand"
             IsPassword="True"
             Placeholder="Password"
             Text="{Binding Password}"
             VerticalOptions="FillAndExpand" />
-        <Button
+                <Entry
             Grid.Row="4"
+             PlaceholderColor="#1C375C"
+            TextColor="Black"
+            HorizontalOptions="FillAndExpand"
+            Placeholder="Name"
+            Text="{Binding Name}"
+            VerticalOptions="FillAndExpand" />
+                <Entry
+            Grid.Row="5"
+            HorizontalOptions="FillAndExpand"
+          PlaceholderColor="#1C375C"
+            TextColor="Black"
+            Placeholder="Image"
+            Text="{Binding PicturePath}"
+            VerticalOptions="FillAndExpand" />
+                <Button
+            Grid.Row="6"
             BackgroundColor="#1C375C"
             Command="{Binding RegisterUser}"
             CornerRadius="20"
             Text="Register" />
+            </Grid>
+        </Frame>
     </Grid>
+   
 </ContentPage>
