Some new problems
Go most to work when suddenly then chatpage will only load first page and no other

--- a/ChatRooms.xaml
+++ b/ChatRooms.xaml
@@ -9,6 +9,8 @@
             Text="Chat Rooms!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+        <Label Text="{Binding Areanbr}" TextColor="White" VerticalOptions="Center" 
+            HorizontalOptions="Center" />
         <CollectionView ItemsSource="{Binding AreasCollection}" SelectionMode="Single" SelectedItem="{Binding SelectedArea}" SelectionChangedCommand="{Binding SelectedAreas}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
