--- a/ChatPage.xaml
+++ b/ChatPage.xaml
@@ -23,7 +23,7 @@
     </ContentPage.Resources>
     <Grid Margin="5"
           RowDefinitions="Auto,*,Auto" BackgroundColor="#1C375C">
-        <Label Margin="5, 0, 0, 0" Text="{Binding AreaName}" Grid.Row="0" />
+        <Label Margin="5, 0, 0, 0" Text="{Binding AreaName}" Grid.Row="0"  TextColor="White"/>
         <ScrollView Margin="5" BackgroundColor="White" Grid.Row="1"
                    >
             <CollectionView ItemsSource="{Binding MessagesCollection}"  Grid.Row="1">
@@ -42,8 +42,8 @@
                                             <Label Grid.Column="0"  Text="{Binding name}" Style="{StaticResource NameTextStyle}" />
                                             <Label Grid.Column="01"  Margin="10, 0, 0,0" Text="{Binding date}" FontSize="12" TextColor="Black" FontFamily="Metropolis Regular"/>
                                             </Grid>
-                                        
-                                        <Label Text="{Binding chattext}" Style="{StaticResource ChatTextStyle}"/>
+
+                                        <Label Text="{Binding chattext}" Style="{StaticResource ChatTextStyle}" TextColor="Black" />
                                        
                                     </StackLayout>
                                     
@@ -57,8 +57,13 @@
             </CollectionView>
         </ScrollView>
         <StackLayout Grid.Row="2">
-            <Entry BackgroundColor="White" TextColor="Black" Margin="2, 0"/>
-            <Button Text="SEND" BackgroundColor="BurlyWood" TextColor="Black" Margin="5" />
+            <Entry BackgroundColor="White" TextColor="Black" Margin="2, 0" Text="{Binding ChatSend}" />
+            <Grid ColumnDefinitions="*, *">
+                
+                <Button Text="TILBAGE" BackgroundColor="BurlyWood" TextColor="Black" Margin="5" Command="{Binding BackCommand}"/>
+                <Button Grid.Column="1" Text="SEND" BackgroundColor="BurlyWood" TextColor="Black" Margin="5" Command="{Binding SendChatCommand}"/>
+            </Grid>
+           
         </StackLayout>
         
     </Grid>
