--- a/Chat1Page.xaml
+++ b/Chat1Page.xaml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiChatAppdeux.ChatPage"
-             NavigationPage.HasNavigationBar="False"
+             x:Class="MauiChatAppdeux.Chat1Page"
+             xmlns:templates="clr-namespace:MauiChatAppdeux.Views.Templates"
              Title="ChatPage">
-    <ContentPage.Resources>
+   <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="NameTextStyle" TargetType="Label">
                 <Setter Property="TextColor" Value="Black" />
@@ -36,8 +36,13 @@
         <ScrollView Margin="5" BackgroundColor="White" Grid.Row="1">
             <CollectionView ItemsSource="{Binding MessagesCollection}"  Grid.Row="1">
                 <CollectionView.ItemTemplate >
-                    <DataTemplate>
-                        <Border BackgroundColor="White">
+                    <DataTemplate  >
+                        <templates:ChatTemplate/>
+
+
+
+
+                        <!-- <Border BackgroundColor="White">
                             
                             <Grid ColumnDefinitions="Auto, *" RowSpacing="0" Margin="7, 5, 7, 10" >
                                 <Grid>
@@ -57,7 +62,7 @@
                                     
                                 </Grid>
                             </Grid>
-                        </Border>
+                        </Border>-->
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
@@ -77,5 +82,4 @@
         </StackLayout>
         
     </Grid>
-
 </ContentPage>
