--- a/ChatRooms.xaml
+++ b/ChatRooms.xaml
@@ -9,8 +9,7 @@
             Text="Chat Rooms!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-        <Label Text="{Binding Areanbr}" TextColor="White" VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+       
         <CollectionView ItemsSource="{Binding AreasCollection}" SelectionMode="Single" SelectedItem="{Binding SelectedArea}" SelectionChangedCommand="{Binding SelectedAreas}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
@@ -30,6 +29,29 @@
                         </Grid>
 
                     </StackLayout>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        <CollectionView ItemsSource="{Binding pages}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Border >
+
+                        <StackLayout BackgroundColor="White" Orientation="Vertical" HeightRequest="50">
+                            <Grid HorizontalOptions="StartAndExpand"  Padding="10">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="1*"/>
+
+                                </Grid.ColumnDefinitions>
+                               
+                                <Label Grid.Column="1" TextColor="Black"  Text="{Binding itemname}" Margin="10, 0, 0, 0" Padding="0, 10, 0, 0" />
+
+
+                            </Grid>
+
+                        </StackLayout>
                     </Border>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
