--- a/ChatRooms.xaml
+++ b/ChatRooms.xaml
@@ -2,61 +2,28 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="MauiChatAppdeux.ChatRooms"
+             xmlns:templates="clr-namespace:MauiChatAppdeux.Views.Templates"
+             
             NavigationPage.HasNavigationBar="False"
              Title="ChatRooms">
-    <VerticalStackLayout BackgroundColor="#1C375C">
+    <StackLayout BackgroundColor="#1C375C" Margin="0,0,0,10">
         <Label 
-            Text="Chat Rooms!"
+            
+            Text="Welcome to the Chat Rooms!"
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            HorizontalOptions="Center" TextColor="White" Margin="0,10,0,0"/>
        
-        <CollectionView ItemsSource="{Binding AreasCollection}" SelectionMode="Single" SelectedItem="{Binding SelectedArea}" SelectionChangedCommand="{Binding SelectedAreas}">
+        <CollectionView   ItemsSource="{Binding AreasCollection}" SelectionMode="Single" SelectedItem="{Binding SelectedArea}" SelectionChangedCommand="{Binding SelectedAreas}">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Border >
-                                           
-                        <StackLayout BackgroundColor="White" Orientation="Vertical" HeightRequest="50">
-                        <Grid HorizontalOptions="StartAndExpand"  Padding="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="1*"/>
+                <DataTemplate >
+                    <templates:ChatRoomTemplate/>
 
-                            </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Source="{Binding image}" WidthRequest="50" HeightRequest="50" />
-                            <Label Grid.Column="1" TextColor="Black"  Text="{Binding name}" Margin="10, 0, 0, 0" Padding="0, 10, 0, 0" />
-                               
-                           
-                        </Grid>
-
-                    </StackLayout>
-                    </Border>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-        <CollectionView ItemsSource="{Binding pages}">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Border >
-
-                        <StackLayout BackgroundColor="White" Orientation="Vertical" HeightRequest="50">
-                            <Grid HorizontalOptions="StartAndExpand"  Padding="10">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="1*"/>
-
-                                </Grid.ColumnDefinitions>
-                               
-                                <Label Grid.Column="1" TextColor="Black"  Text="{Binding itemname}" Margin="10, 0, 0, 0" Padding="0, 10, 0, 0" />
-
-
-                            </Grid>
-
-                        </StackLayout>
-                    </Border>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </VerticalStackLayout>
+        
+       
+    </StackLayout>
     
     
 </ContentPage>
