--- a/Views/Chat1Page.xaml
+++ b/Views/Chat1Page.xaml
@@ -42,25 +42,33 @@
 
 
         <!-- The Chat -->
+        
+         <!--  <RefreshView IsRefreshing="{Binding isRefreshing}"
+                 Command="{Binding RefreshCommand}"  >-->
 
-        <ScrollView Grid.Row="1" Style="{StaticResource ChatScroll}">
-            <CollectionView ItemsSource="{Binding MessagesCollection}"  Grid.Row="1">
-                <CollectionView.ItemTemplate >
-                    <DataTemplate>
-                        <templates:ChatTemplate/>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </ScrollView>
-      
+            <ScrollView   Style="{StaticResource ChatScroll}"  Grid.Row="1" >
+
+
+                    <CollectionView ItemsSource="{Binding MessagesCollection}"  Grid.Row="1" >
+                        <CollectionView.ItemTemplate >
+                            <DataTemplate>
+                                <templates:ChatTemplate/>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </ScrollView>
+           <!-- </RefreshView>-->
+        
+        
         <!-- The Input -->
-        <StackLayout Grid.Row="2">
+        <StackLayout Grid.Row="2" Margin="0,10,0,0">
             <Border  StrokeThickness="2">
                 <Entry BackgroundColor="White" TextColor="Black" Margin="8, 0" Text="{Binding ChatSend}"  />
             </Border>
-            <Grid ColumnDefinitions="*, *">
+            <Grid ColumnDefinitions="*, *,*">
                 <Button Text="TILBAGE" Command="{Binding BackCommand}" Style="{StaticResource ChatButton}"/>
-                <Button Grid.Column="1" Text="SEND" Command="{Binding SendChatCommand}" Style="{StaticResource ChatButton}"/>
+                <Button Grid.Column="1" Text="Load" Command="{Binding LoadCommand}" Style="{StaticResource ChatButton}"/>
+                <Button Grid.Column="2" Text="SEND" Command="{Binding SendChatCommand}" Style="{StaticResource ChatButton}"/>
             </Grid>
         </StackLayout>
         
