--- a/Views/Templates/ChatRoomTemplate.xaml
+++ b/Views/Templates/ChatRoomTemplate.xaml
@@ -4,17 +4,18 @@
              x:Class="MauiChatAppdeux.Views.Templates.ChatRoomTemplate"
             >
     <ContentView.Content>
-        <Border >
-            <StackLayout  Orientation="Vertical" HeightRequest="60" Margin="8,0"  Padding="5">
-                <Grid HorizontalOptions="StartAndExpand"  BackgroundColor="White">
+        
+            <StackLayout  Orientation="Vertical" HeightRequest="60" Margin="18,0"  Padding="5" BackgroundColor="#1C375C" >
+                <Grid HorizontalOptions="FillAndExpand"  BackgroundColor="White" WidthRequest="350" Grid.Column="2">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="60"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Source="{Binding image}" WidthRequest="50" HeightRequest="50" />
-                    <Label Grid.Column="1" TextColor="Black"  Text="{Binding name}" Margin="10, 0, 0, 0" Padding="0, 10, 0, 0" />
+                <Image Grid.Column="0" Source="{Binding image}" WidthRequest="50" HeightRequest="50" HorizontalOptions="Start" Margin="10, 0"/>
+                    
+                <Label Grid.Column="1" TextColor="Black"  Text="{Binding name}" Margin="20,0"  Padding="0, 10, 0, 0" HorizontalOptions="Start"/>
                 </Grid>
             </StackLayout>
-        </Border>
+       
     </ContentView.Content>
 </ContentView>
